--- a/models.qmd
+++ b/models.qmd
@@ -14,6 +14,7 @@ library(tidymodels)
 library(parsnip)
 library(lubridate)
 library(see)
+library(glmnet)
 
 bike_data <- read_csv(file='https://www4.stat.ncsu.edu/~online/datasets/SeoulBikeData.csv',show_col_types=FALSE)
 head(bike_data)
@@ -357,9 +358,87 @@ We'll consider some additional models as well. This includes the following:
 
 ## Lasso Model
 
-Starting with our Lasso Model....
+Starting with our Lasso Model. We can re-use our 3 recipes from the MLR steps which are simply named `recipe_1`, `recipe_2`, and `recipe_3`. We will have our lasso model and then create our 3 separate workflows
 
 ```{r}
+lasso_mod <- linear_reg(penalty = tune(), mixture = 1) |>
+  set_engine("glmnet")
 
+lasso_wfl_1 <- workflow() |>
+  add_recipe(recipe_1) |>
+  add_model(lasso_mod)
+
+lasso_wfl_2 <- workflow() |>
+  add_recipe(recipe_1) |>
+  add_model(lasso_mod)
+
+lasso_wfl_3 <- workflow() |>
+  add_recipe(recipe_1) |>
+  add_model(lasso_mod)
+
+```
+
+We'll create tuning grids to execute our separate workflows on 200 different levels of our tuning parameter. Our CV folds will be passed for sampling.
+
+We are showing the output for `lasso_grid_1`. We can see there are nested tibbles with metrics on the 200 models trained for each fold!
+
+```{r}
+lasso_grid_1 <- lasso_wfl_1 |>
+  tune_grid(resamples = bike_train_10_fold,
+            grid = grid_regular(penalty(), levels = 200))
+
+lasso_grid_2 <- lasso_wfl_2 |>
+  tune_grid(resamples = bike_train_10_fold,
+            grid = grid_regular(penalty(), levels = 200)) 
+
+lasso_grid_3 <- lasso_wfl_3 |>
+  tune_grid(resamples = bike_train_10_fold,
+            grid = grid_regular(penalty(), levels = 200)) 
+
+lasso_grid_1
+```
+Going one step further, lets unpack the above output to make it a little cleaner and more readable. To reduce clutter, we'll show the output for `lasso_grid_1`. Don't worry! We'll look at the RMSE for other models later.
+
+Again, this seems hard to read as the RMSE seems static across penalties. Note that there are 200 records in this tibble, so we should see some differences on the back-end of our records.
+
+```{r}
+lasso_grid_1 |>
+  collect_metrics() |>
+  filter(.metric == "rmse")
+```
+
+Lets fetch the lowest RMSE for each of our workflows and showcase the output. We have very similar optimal pentalties, our tuning parameter.
+
+```{r}
+lowest_rmse_1 <- lasso_grid_1 |>
+  select_best(metric = "rmse")
+
+lowest_rmse_2 <- lasso_grid_2 |>
+  select_best(metric = "rmse")
+
+lowest_rmse_3 <- lasso_grid_3 |>
+  select_best(metric = "rmse")
+
+rbind(lowest_rmse_1,lowest_rmse_2,lowest_rmse_3)
+```
+
+Below we find our estimates of our coefficients and the penalty for the model fit on the entire training set.
+
+```{r}
+lasso_final <- lasso_wfl_3 |>
+  finalize_workflow(lowest_rmse_3) |>
+  fit(bike_train)
+tidy(lasso_final)
+```
+
+Lastly, using our best model, we'll train on the training dataset and evalauate performance against the test set. See our metrics below for RMSE for our best Lasso Model.
+
+```{r}
+lasso_test_metrics <- lasso_wfl_3 |>
+  finalize_workflow(lowest_rmse_3) |>
+  last_fit(bike_split) |>
+  collect_metrics()
+
+lasso_test_metrics
 ```
 
