--- a/models.qmd
+++ b/models.qmd
@@ -442,3 +442,59 @@ lasso_test_metrics <- lasso_wfl_3 |>
 lasso_test_metrics
 ```
 
+## Regression Tree
+
+Now for our regression tree model. We'll assume we are using `recipe_1` from previous. Lets define our model and store our regression tree workflow.
+
+We are tuning on the depth of our tree and cost complexity with the minimum number of nodes being 20.
+
+```{r}
+tree_mod <- decision_tree(tree_depth = tune(),
+                          min_n = 20,
+                          cost_complexity = tune()) |>
+  set_engine("rpart") |>
+  set_mode("regression")
+
+tree_wfl <- workflow() |>
+  add_recipe(recipe_1) |>
+  add_model(tree_mod)
+
+tree_wfl
+```
+Now we want to fit our data to our cross-validation folds. We'll use our workflow we created above and tune our grid using the folds. Note that we are not specifying the levels for tuning complexity and tree depth.
+
+We can see in our output the cost complexity and tree depth parameters used along with their RMSE and RSQ.
+
+```{r}
+tree_fits <- tree_wfl |> 
+  tune_grid(resamples = bike_train_10_fold)
+
+tree_fits |>
+  collect_metrics()
+```
+
+Which one is our best? Well we see that the parameters that give us the lowest RMSE have the below cost complexity and 11 layers in the tree (depth)
+
+```{r}
+tree_best_params <- select_best(tree_fits, metric = "rmse")
+
+tree_best_params
+```
+
+Using the above, lets finalize our workflow using our best parameters. Using this workflow we'll train on our training set and calculate our performance metrics on the test set.
+
+We see our RMSE and RSQ of our best regression tree model outputted below.
+
+```{r}
+tree_final_wfl <- tree_wfl |>
+  finalize_workflow(tree_best_params)
+
+tree_final_fit <- tree_final_wfl |>
+  last_fit(bike_split) |>
+  collect_metrics()
+
+tree_final_fit
+```
+Placeholder: Include some other things per the homework req doc
+
+
